2006-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkpixmap.c: Call G_DEF_SETTERS() for Gdk::Pixmap.

	* src/rbgdkwindow.c:
	- Fixed wrong number of argument of window_set_gl_capability().
	- Call G_DEF_SETTERS() for Gdk::Window.

2005-10-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkglext.c: Added Gtk::GL::BUILD_VERSION. 

2005-08-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkpixmap.c (Init_gtkglext_gdk_pixmap): Fix wrong number
	of argument of pixmap_set_gl_capability().

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2004-09-23 Vincent Isambart <isambart@netcourrier.com>

	* src/lib/gtkglext.rb: Improved log handling.
	Defined Gtk::GL::LOG_DOMAIN and Gdk::GL::LOG_DOMAIN.
	(Thanks to Masao because he did 99.9% of this ;o))

2004-06-30 Vincent Isambart <isambart@netcourrier.com>

	* sample/*.rb: corrected some minor bugs when quitting on Mac OS X

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkgldrawable.c: Update Copyright.

2004-03-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkgldrawable.c: Fix warning of Gdk::GLDrawable#gl_begin

2004-02-13 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkgldrawable.c: added support for blocks in gl_begin
	gldrawable.gl_begin { ... }
	* sample/*.rb: updated the samples to use the block version of gl_begin

2003-12-29 Vincent Isambart <isambart@netcourrier.com>

	* sample/*.rb: corrected the behavior when closing the window.

2003-12-26 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglext.c: mGdk and mGdk are no more global variables.
	* sample/*.rb: corrected the behavior of the "Quit" button.

2003-09-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: win32 support.

2003-08-28 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkwindow.c: Gdk::Window#gl_drawable can now be called

2003-08-27 Vincent Isambart <isambart@netcourrier.com>

	* src/rbgdkglconfig.c, src/rbgtkwidget.c: replaced